--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_info">Info</string>
+
+    <string name="helper_pager_footer">Page %1$d of %2$d</string>
 </resources>
