--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Cat Food</string>
+    <string name="sign_in_activity_label">Sign In</string>
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_info">Info</string>
-
+    <string name="options_logout">LogOut</string>
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
+
 </resources>
