--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
     <string name="prices">Prices</string>
 
-    <string name="search_hint">GitHub Repository</string>
+    <string name="search_hint">Search</string>
     <string name="no_results">No results 😓</string>
-    <string name="language">Language: %s</string>
     <string name="loading">Loading</string>
-    <string name="unknown">\?</string>
+    <string name="error_app">Application Error!</string>
+    <string name="snackbar_retry">Retry</string>
 
 </resources>
