start filter fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sign_in_activity_label">Sign In</string>
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
+    <string name="title_filter">Filter</string>
     <string name="title_profile">Profile</string>
     <string name="title_info">Info</string>
     <string name="options_logout">LogOut</string>
