--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,12 @@
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
     <string name="prices">Prices</string>
 
+    <string name="chip_everything">Everything</string>
+    <string name="chip_dryfood">Dry Food</string>
+    <string name="chip_canned">Canned</string>
+    <string name="chip_preservs">Preservs</string>
+    <string name="chip_tasty">Tasty</string>
+
     <string name="search_hint">Search</string>
     <string name="no_results">No results 😓</string>
     <string name="loading">Loading</string>
