--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="chip_preservs">Preservs</string>
     <string name="chip_tasty">Tasty</string>
 
+    <string name="dialog_select_brand">Select Brand</string>
+
     <string name="search_hint">Search</string>
     <string name="no_results">No results 😓</string>
     <string name="loading">Loading</string>
