--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,15 @@
     <string name="options_logout">LogOut</string>
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
     <string name="prices">Prices</string>
+    <string name="offers">offers</string>
 
     <string name="chip_everything">Everything</string>
     <string name="chip_dryfood">Dry Food</string>
     <string name="chip_canned">Canned</string>
     <string name="chip_preservs">Preservs</string>
     <string name="chip_tasty">Tasty</string>
+    <string name="chip_favorites">Favorites</string>
+    <string name="btn_link">Link</string>
 
     <string name="dialog_select_brand">Select Brand</string>
 
