--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_search">Искать</string>
     <string name="title_product">Продукт</string>
     <string name="title_profile">Профиль</string>
+    <string name="title_favorites">Избранное</string>
     <string name="title_info">Инфо</string>
     <string name="title_browser">Браузер</string>
     <string name="options_logout">Выход</string>
