--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
     <string name="prices">Prices</string>
     <string name="offers">offers</string>
+    <string name="profile_name">Name: %1$s</string>
+    <string name="profile_email">Email: %1$s</string>
 
     <string name="chip_everything">Everything</string>
     <string name="chip_dryfood">Dry Food</string>
