--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="offers">offers</string>
     <string name="profile_name">Name: %1$s</string>
     <string name="profile_email">Email: %1$s</string>
+    <string name="sign_in_title">Login to your account</string>
 
     <string name="chip_everything">Everything</string>
     <string name="chip_dryfood">Dry Food</string>
@@ -27,7 +28,7 @@
 
     <string name="search_hint">Search</string>
     <string name="no_results">No results 😓</string>
-    <string name="loading">Loading</string>
+    <string name="loading">Loading…</string>
     <string name="error_app">Application Error!</string>
     <string name="snackbar_retry">Retry</string>
 
