--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="chip_tasty">Tasty</string>
     <string name="chip_favorites">Favorites</string>
     <string name="btn_link">Link</string>
+    <string name="switch_themes">Night Theme</string>
 
     <string name="dialog_select_brand">Select Brand</string>
 
