--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="profile_name">Name: %1$s</string>
     <string name="profile_email">Email: %1$s</string>
     <string name="sign_in_title">Login to your account</string>
+    <string name="brand_everything">All producers</string>
 
     <string name="chip_everything">Everything</string>
     <string name="chip_dryfood">Dry Food</string>
