--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -9,7 +9,6 @@
     <string name="title_favorites">Избранное</string>
     <string name="title_info">Инфо</string>
     <string name="title_browser">Браузер</string>
-    <string name="options_logout">Выход</string>
     <string name="helper_pager_footer">Стр. %1$d of %2$d</string>
     <string name="prices">Цены</string>
     <string name="offers">предложений</string>
@@ -26,6 +25,7 @@
     <string name="chip_favorites">Избранное</string>
     <string name="btn_link">Ссылка</string>
     <string name="switch_themes">Ночная тема</string>
+    <string name="btn_logout">Выйти из аккаунта</string>
 
     <string name="dialog_select_brand">Выберите производителя</string>
 
