--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_info">Info</string>
     <string name="title_browser">Browser</string>
-    <string name="options_logout">LogOut</string>
     <string name="helper_pager_footer">Page %1$d of %2$d</string>
     <string name="prices">Prices</string>
     <string name="offers">offers</string>
@@ -25,13 +24,14 @@
     <string name="chip_favorites">Favorites</string>
     <string name="btn_link">Link</string>
     <string name="switch_themes">Night Theme</string>
+    <string name="btn_logout">LogOut</string>
 
     <string name="dialog_select_brand">Select Brand</string>
 
     <string name="search_hint">Search</string>
     <string name="no_results">No results 😓</string>
     <string name="loading">Loading…</string>
-    <string name="error_app">Application Error!</string>
+    <string name="error_app">Connection Error!</string>
     <string name="snackbar_retry">Retry</string>
 
 </resources>
